--- a/src/components/Image/style.css
+++ b/src/components/Image/style.css
@@ -2,15 +2,17 @@
     background-repeat: no-repeat; 
     background-size: cover; 
     background-attachment: fixed;
+    width: 100%;
 }
 
 .image h1 {
     color: white;
     text-align: left;
-    padding: 20px;
+    padding: 10px;
     margin: auto;
     font-family: 'Quicksand', sans-serif;
     font-size: 35px;
+    width: 600px;
 }
 
 .image p {
@@ -18,12 +20,14 @@
     font-family: 'Tajawal', sans-serif;
     padding: 10px;
     margin: 15px;
+    font-size: 15px;
 }
 
 #aboutbox {
-    background-color: white;
-    margin: auto;
-    padding: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    width: 600px;
 }
 
 .image li {
@@ -39,8 +43,8 @@
   }
 
 .image .me {
-    width: 300px;
-    height: 350px;
+    width: 350px;
+    height: 430px;
     margin: 15px;
     padding: 10px;
 }
